--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif, NanumMyeongjo-YetHangul;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif,
+    NanumMyeongjo-YetHangul;
 }
 
 #__next {
